--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pack/plugins/start/vim-tmux-navigator"]
 	path = pack/plugins/start/vim-tmux-navigator
 	url = git@github.com:christoomey/vim-tmux-navigator.git
+[submodule "pack/plugins/start/vim-templates"]
+	path = pack/plugins/start/vim-templates
+	url = https://github.com/tibabit/vim-templates.git
