added bit about multiple times

--- a/templates/sv-email.template
+++ b/templates/sv-email.template
@@ -3,7 +3,7 @@ I will be your {{CURSOR}} supervisor.
 
 I propose {{CURSOR}}
 
-I please email to confirm the time you would prefer. It will be first come first serve. 
+I please email to confirm the time you would prefer. It will be first come first serve, please only one person from each group confirm the time. And please indicate multiple times you are all free.
 
 The work can be found here: http://www.cl.cam.ac.uk/~josi2/supervision_work. Please try and attempt all the questions, then hand the work in as a PDF at least 36 hours before the SV, with you name clearly at the top and page numbers in the form X/Y. If you know latex please use that with this template (attached).
 Please don’t leave out any questions if you cannot answer question please include your working and ideas even if you are not 100% sure of the answer. 
