--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pack/plugins/start/vim-templates"]
 	path = pack/plugins/start/vim-templates
 	url = https://github.com/tibabit/vim-templates.git
+[submodule "pack/plugins/start/nerdtree"]
+	path = pack/plugins/start/nerdtree
+	url = https://github.com/scrooloose/nerdtree
