--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "pack/plugins/start/souffle.vim"]
 	path = pack/plugins/start/souffle.vim
 	url = https://github.com/souffle-lang/souffle.vim
+[submodule "pack/plugins/start/nerdcommenter"]
+	path = pack/plugins/start/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter
